--- a/templates/vars.erb
+++ b/templates/vars.erb
@@ -1,32 +1,60 @@
-# easy-rsa parameter settings
+# Easy-RSA 3 parameter settings
 
-# NOTE: If you installed from an RPM,
-# don't edit this file in place in
-# /usr/share/openvpn/easy-rsa --
-# instead, you should copy the whole
-# easy-rsa directory to another location
-# (such as /etc/openvpn) so that your
-# edits will not be wiped out by a future
-# OpenVPN package upgrade.
+# NOTE: If you installed Easy-RSA from your package manager, do not edit
+# this file in place -- instead, you should copy the entire easy-rsa directory
+# to another location so future upgrades do not wipe out your changes.
+
+# HOW TO USE THIS FILE
+#
+# vars.example contains built-in examples to Easy-RSA settings. You MUST name
+# this file "vars" if you want it to be used as a configuration file. If you
+# do not, it WILL NOT be automatically read when you call easyrsa commands.
+#
+# It is not necessary to use this config file unless you wish to change
+# operational defaults. These defaults should be fine for many uses without
+# the need to copy and edit the "vars" file.
+#
+# All of the editable settings are shown commented and start with the command
+# "set_var" -- this means any set_var command that is uncommented has been
+# modified by the user. If you are happy with a default, there is no need to
+# define the value to its default.
+
+# NOTES FOR WINDOWS USERS
+#
+# Paths for Windows  *MUST* use forward slashes, or optionally double-escaped
+# backslashes (single forward slashes are recommended.) This means your path
+# to the openssl binary might look like this:
+# "C:/Program Files/OpenSSL-Win32/bin/openssl.exe"
+
+# A little housekeeping: DO NOT EDIT THIS SECTION
+#
+# Easy-RSA 3.x does not source into the environment directly.
+# Complain if a user tries to do this:
+if [ -z "$EASYRSA_CALLER" ]; then
+  echo "You appear to be sourcing an Easy-RSA *vars* file. This is" >&2
+  echo "no longer necessary and is disallowed. See the section called" >&2
+  echo "*How to use this file* near the top comments for more details." >&2
+  return 1
+fi
 
 # This variable should point to
 # the top level of the easy-rsa
 # tree.
-export EASY_RSA="`pwd`"
+set_var EASYRSA "`pwd`"
 
 #
 # This variable should point to
 # the requested executables
 #
-export OPENSSL="openssl"
-export PKCS11TOOL="pkcs11-tool"
-export GREP="grep"
+set_var EASYRSA_OPENSSL       "openssl"
+set_var EASYRSA_PKCS11TOOL    "pkcs11-tool"
+set_var EASYRSA_GREP          "grep"
 
 
 # This variable should point to
 # the openssl.cnf file included
 # with easy-rsa.
-export KEY_CONFIG="${EASY_RSA}/openssl.cnf"
+set_var EASYRSA_SSL_CONF      "${EASY_RSA}/openssl-easyrsa.cnf"
 
 # Edit this variable to point to
 # your soon-to-be-created key
@@ -36,33 +64,31 @@ export KEY_CONFIG="${EASY_RSA}/openssl.cnf"
 # a rm -rf on this directory
 # so make sure you define
 # it correctly!
-export KEY_DIR="<%= node['openvpn']['key_dir'] %>"
-
-# Issue rm -rf warning
-echo NOTE: If you run ./clean-all, I will be doing a rm -rf on $KEY_DIR
+set_var EASYRSA_PKI           "<%= node['openvpn']['key_dir'] %>"
 
 # PKCS11 fixes
-export PKCS11_MODULE_PATH="dummy"
-export PKCS11_PIN="dummy"
+set_var EASYRSA_PKCS11_MODULE_PATH "dummy"
+set_var EASYRSA_PKCS11_PIN    "dummy"
 
 # Increase this to 2048 if you
 # are paranoid.  This will slow
 # down TLS negotiation performance
 # as well as the one-time DH parms
 # generation process.
-export KEY_SIZE=<%= node['openvpn']['key']['size'] %>
+set_var EASYRSA_KEY_SIZE      <%= node['openvpn']['key']['size'] %>
 
 # In how many days should the root CA key expire?
-export CA_EXPIRE=<%= node['openvpn']['key']['ca_expire'] %>
+set_var EASYRSA_CA_EXPIRE     <%= node['openvpn']['key']['ca_expire'] %>
 
 # In how many days should certificates expire?
-export KEY_EXPIRE=<%= node['openvpn']['key']['expire'] %>
+set_var EASYRSA_CERT_EXPIRE   <%= node['openvpn']['key']['expire'] %>
+set_var EASYRSA_CRL_DAYS      <%= node['openvpn']['key']['crl_expire'] %>
 
 # These are the default values for fields
 # which will be placed in the certificate.
 # Don't leave any of these fields blank.
-export KEY_COUNTRY="<%= node['openvpn']['key']['country'] %>"
-export KEY_PROVINCE="<%= node['openvpn']['key']['province'] %>"
-export KEY_CITY="<%= node['openvpn']['key']['city'] %>"
-export KEY_ORG="<%= node['openvpn']['key']['org'] %>"
-export KEY_EMAIL="<%= node['openvpn']['key']['email'] %>"
+set_var EASYRSA_REQ_COUNTRY   "<%= node['openvpn']['key']['country'] %>"
+set_var EASYRSA_REQ_PROVINCE  "<%= node['openvpn']['key']['province'] %>"
+set_var EASYRSA_REQ_CITY      "<%= node['openvpn']['key']['city'] %>"
+set_var EASYRSA_REQ_ORG       "<%= node['openvpn']['key']['org'] %>"
+set_var EASYRSA_REQ_EMAIL     "<%= node['openvpn']['key']['email'] %>"
